[project]
name = "nna008"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "matplotlib>=3.10.7",
    "psycopg>=3.2.13",
    "psycopg2>=2.9.11",
    "pytyped>=2.0.0",
    "sqlalchemy>=2.0.44",
]
